fixed the stuck event.id value in new_skate_modal.html by rendering the whole event tree view at element load.

--- a/Skatertron/static/styles.css
+++ b/Skatertron/static/styles.css
@@ -5,6 +5,10 @@
     position:absolute;
     z-index: 1;
 }
+.new_skate_modal {
+    position:absolute;
+    z-index: 1;
+}
 .CompetitionBrowser {
     background-color: #846347;
     position: fixed;
@@ -14,7 +18,6 @@
     right: 5px;
     z-index: 1;
     }
-
 .AppFrame {
         border: 5px outset #214F59;
         position:fixed;
@@ -24,7 +27,6 @@
         right:0;
         z-index:-1;
     }
-
 .EventBrowser {
     background-color: #5F8E99;
     position: fixed;
